fixes submit button on ios

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -332,6 +332,7 @@ header {
     cursor: pointer;
     height: 30px;
     font-size: 20px;
-    width: 140px; }
+    width: 140px;
+    -webkit-appearance: none; }
 
 /*# sourceMappingURL=main.css.map */
