--- a/public/css/sass/views/_add.scss
+++ b/public/css/sass/views/_add.scss
@@ -50,5 +50,6 @@
         height: 30px;
         font-size: 20px;
         width: 140px;
+        -webkit-appearance: none;
     }
 }
